Fixed whitespace in the rte in chapter outline

--- a/core/templates/css/oppia.css
+++ b/core/templates/css/oppia.css
@@ -541,6 +541,12 @@ p:last-child {
   font-size: 1em !important;
 }
 
+.oppia-rte p {
+  line-height: 1.2;
+  margin-top: 0px;
+  margin-bottom: 18px;
+}
+
 .oppia-rte ol, .oppia-rte ul, .oppia-rte-editor ol, .oppia-rte-editor ul {
   line-height: 1.846;
   margin-bottom: 18px;
